# firmware-mcp-server

./: .gitattributes  .gitignore  ASSETS.md  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING.zh-CN.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  SECURITY.zh-CN.md  pyproject.toml  requirements.txt  sitecustomize.py
config/: devices.example.json
firmware_mcp_server/: __init__.py
src/firmware_mcp_server/: __main__.py  config.py  diagnostics.py  errors.py  executor.py  logging_utils.py  runtime.py  serial_reader.py  server.py
tests/: test_config.py  test_diagnostics.py  test_executor.py
